ghc-4335c07/testsuite/tests/annotations/should_fail/T10826.hs
{-# LANGUAGE Safe #-}
module Test (hook) where

import System.IO.Unsafe

{-# ANN hook (unsafePerformIO (putStrLn "Woops.")) #-}
hook = undefined
